--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href https://iglesiasfernando.github.io/angular-github-actions/",
+
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
