--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --configuration production --base-href https://iglesiasfernando.github.io/angular-github-actions/",
+    "deploy": "ng build --prod --base-href=/newsletter-itsos/",
 
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
