--- a/package.json
+++ b/package.json
@@ -7,41 +7,40 @@
     "build": "ng build",
     "build:prod": "ng build --configuration production --base-href https://iglesiasfernando.github.io/angular-github-actions/",
     "deploy": "ng build --prod --base-href=/newsletter-itsos/",
-
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.7",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.7",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@syncfusion/ej2-angular-richtexteditor": "^19.2.62",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "11.0.7",
+    "@angular/cdk": "11.0.7",
+    "@angular/common": "11.0.7",
+    "@angular/compiler": "11.0.7",
+    "@angular/core": "11.0.7",
+    "@angular/forms": "11.0.7",
+    "@angular/material": "11.0.7",
+    "@angular/platform-browser": "11.0.7",
+    "@angular/platform-browser-dynamic": "11.0.7",
+    "@angular/router": "11.0.7",
+    "@syncfusion/ej2-angular-richtexteditor": "19.2.62",
+    "rxjs": "6.6.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "~12.2.7",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "11.0.7",
+    "@angular/cli": "11.0.7",
+    "@angular/compiler-cli": "11.0.7",
+    "@types/jasmine": "3.8.0",
+    "@types/node": "12.11.1",
     "devextreme-cli": "latest",
-    "devextreme-themebuilder": "^21.1.5",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "devextreme-themebuilder": "21.1.5",
+    "jasmine-core": "3.8.0",
+    "karma": "6.3.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.3",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "typescript": "4.3.5"
   }
 }
