--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@syncfusion/ej2-angular-richtexteditor": "19.2.62",
     "rxjs": "6.6.0",
     "tslib": "2.3.0",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "ts-node": "9.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.2.14",
     "@angular/cli": "11.0.7",
     "@angular/compiler-cli": "11.0.7",
     "@types/jasmine": "3.8.0",
-    "@types/node": "12.11.1",
+    "@types/node": "14.14.14",
     "devextreme-cli": "latest",
     "devextreme-themebuilder": "21.1.5",
     "jasmine-core": "3.8.0",
