--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v1
     - uses: actions/setup-node@v1 #this installs node and npm for us
       with:
-        node-version: '10.x'
+          node-version: '12'
     - name: Build
       run: |
         npm install
